crates/pgls_pretty_print/tests/snapshots/multi/tests__reindex_catalog_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/reindex_catalog_100.sql
snapshot_kind: text
---
REINDEX TABLE pg_class;

REINDEX TABLE pg_index;

REINDEX TABLE pg_operator;

REINDEX TABLE pg_database;

REINDEX TABLE pg_shdescription;

REINDEX INDEX pg_class_oid_index;

REINDEX INDEX pg_class_relname_nsp_index;

REINDEX INDEX pg_index_indexrelid_index;

REINDEX INDEX pg_index_indrelid_index;

REINDEX INDEX pg_database_oid_index;

REINDEX INDEX pg_shdescription_o_c_index;

BEGIN;

SET min_parallel_table_scan_size = 0;

REINDEX INDEX pg_class_oid_index;

REINDEX INDEX pg_class_relname_nsp_index;

REINDEX INDEX pg_index_indexrelid_index;

REINDEX INDEX pg_index_indrelid_index;

REINDEX INDEX pg_database_oid_index;

REINDEX INDEX pg_shdescription_o_c_index;

ROLLBACK;
